--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
