--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
