--- a/package.json
+++ b/package.json
@@ -1,47 +1,39 @@
 {
-  "name": "devabdullayev.uz",
+  "name": "abdulaziz-programmer",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "framer-motion": "^10.16.16",
-    "gsap": "^3.12.4",
-    "react": "^18.2.0",
-    "react-aos": "^1.0.1",
-    "react-dom": "^18.2.0",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
-    "react-tabs": "^6.0.2",
-    "react-type-animation": "^3.2.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "cookies-next": "^4.1.0",
+    "framer-motion": "^10.18.0",
+    "gsap": "^3.12.4",
+    "js-cookie": "^3.0.5",
+    "lenis": "^0.0.2",
+    "locomotive-scroll": "^5.0.0-beta.8",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-countup": "^6.5.0",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4",
+    "react-multi-carousel": "^2.8.4",
+    "react-phone-input-2": "^2.15.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
+    "react-type-animation": "^3.2.0",
+    "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.69.7",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4"
   }
 }
