--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "devabdullayev",
-  "version": "2",
-  "builds": [{ "src": "package.json", "use": "@vercel/next" }],
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "now-build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,7 +15,7 @@
     "js-cookie": "^3.0.5",
     "lenis": "^0.0.2",
     "locomotive-scroll": "^5.0.0-beta.8",
-    "next": "^14.0.4",
+    "next": "14.0.4",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
